feat(client): build Product Detail Page

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $dark-color: #323232;
+$medium-gray-color: #969696;
 $light-gray-color: #FAFAFA;
 $medium-dark-color: #646464;
 $primary-color: #FF9F24;
