--- a/client/src/components/Header.scss
+++ b/client/src/components/Header.scss
@@ -1,3 +1,5 @@
+@use '../styles/variables' as vars;
+
 .header {
     display: flex;
     align-items: center;
@@ -18,12 +20,12 @@
         }
 
         svg rect {
-            fill: #1a1a1a;
+            fill: vars.$dark-color;
             transition: fill 0.3s ease;
         }
 
         &:hover svg rect {
-            fill: #ff6b00;
+            fill: vars.$primary-color;
         }
     }
 
