--- a/client/src/pages/ProductListPage.scss
+++ b/client/src/pages/ProductListPage.scss
@@ -1,16 +1,35 @@
 @import '../styles/variables';
 
-.product-page {  
+.product-page {
   .product-page-title {
     margin-bottom: 1rem;
     font-size: 18px;
     font-weight: 700;
     color: $dark-color;
   }
-  
+
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
     gap: 1.5rem;
+  }
+
+  .welcome-message {
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+
+    .subtitle {
+      font-size: 1rem;
+      color: $medium-dark-color;
+      font-weight: 400;
+      margin: 8px 0;
+    }
+
+    .title {
+      font-size: 1.5rem;
+      color: $dark-color;
+      font-weight: 700;
+      margin: 0;
+    }
   }
 }
